# hebiscratch

./: .env.development  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  README.md  build-scratch.sh  docker-compose.dev.full.yml  docker-compose.dev.yml  docker-compose.yml  start.sh  todolist.md
backend-python/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  run.py
backend-python/app/: __init__.py  main.py
backend-python/app/admin/: __init__.py
backend-python/app/admin/api/: admin.py
backend-python/app/api/: __init__.py  admin.py  auth.py  deps.py  projects.py  share.py
backend-python/app/common/: __init__.py
backend-python/app/common/api/: __init__.py  auth.py  deps.py
backend-python/app/common/core/: __init__.py  config.py  security.py
backend-python/app/common/prompts/: __init__.py  manager.py
backend-python/app/common/schemas/: __init__.py  auth.py
backend-python/app/common/services/: __init__.py  storage.py
backend-python/app/core/: config.py
backend-python/app/mistakes/: __init__.py
backend-python/app/mistakes/api/: __init__.py  deps.py  mistakes.py
backend-python/app/mistakes/models/: __init__.py  mistake.py
backend-python/app/mistakes/schemas/: __init__.py  mistake.py
backend-python/app/models/: __init__.py  project.py  user.py
backend-python/app/schemas/: __init__.py  admin.py  auth.py  project.py
backend-python/app/scratch/: __init__.py
backend-python/app/scratch/api/: __init__.py  (+3 more)
backend-python/app/services/: __init__.py  project.py  storage.py
(+50 files in other folders)
